--- a/kadai05/css/style.css
+++ b/kadai05/css/style.css
@@ -44,43 +44,212 @@ img {
     vertical-align: bottom;
 }
 
-/* --------------------header-------------------- */
-header {
+.list-body {
+    margin-top: -13vh;
+    padding-top: 13vh;
+}
+
+.list-nav-wrapper {
+    position: fixed;
+    top: 5%;
+    z-index: calc(infinity);
+}
+
+.list-nav-aline {
+    align-items: center;
+}
+
+.list-logo img {
+    width: 100px;
+    position: fixed;
+    top: 3%;
+    left: 3%;
+}
+
+.list-nav {
+    display: flex;
+    margin-left: auto;
+    align-items: center;
+    width: 25%;
+    justify-content: space-between;
+    position: fixed;
+    top: 5%;
+    right: 3%;
+    z-index: 1000;
+}
+
+.list-nav li a {
+    color: black;
+    font-size: 20px;
+    transition: 0.2s;
+}
+
+.list-nav li a:hover {
+    color: #D03A3A;
+}
+
+.list-title {
+    width: 700px;
+    margin: 0 auto;
+    text-align: center;
+}
+
+.list-title h1 {
+    font-size: 80px;
+    font-weight: normal;
+    margin-top: 13vh;
+}
+
+summary {
+    list-style: none;
+    text-align: center;
+    font-size: 25px;
+    cursor: pointer;
+    align-items: center;
+}
+
+.toggle_button i {
+    margin-left: 10px;
+}
+
+details[open] .toggle_button i {
+    transform: rotate(180deg);
+    transition: transform 0.4s;
+}
+
+@keyframes fadeIn {
+    0% {
+        opacity: 0;
+        transform: translateY(-12px);
+    }
+
+    100% {
+        opacity: 1;
+        transform: none;
+    }
+}
+
+details[open] .filter-wrapper {
+    animation: fadeIn 0.85s ease;
+}
+
+.list-main {
+    margin: 50px 0 100px 0;
+}
+
+.list-ul {
+    display: flex;
+    justify-content: flex-start;
+    flex-wrap: wrap;
+    margin: 0 auto;
+    width: 1350px;
+    row-gap: 20px;
+}
+
+.list-ul li a {
+    text-align: center;
+    transition: 0.2s;
+}
+
+.list-ul li a img {
+    width: 130px;
+    margin: 0 10px;
+    background-color: #EDEEF1;
+    border-radius: 16px;
+}
+
+.list-ul li a img:hover {
+    position: relative;
+    left: 0;
+    bottom: 5px;
+}
+
+.list-ul li a p {
+    font-size: 1vw;
+    color: black;
+}
+
+.list-search {
+    position: fixed;
+    top: 5%;
+    left: 50%;
+    transform: translateX(-50%);
+    z-index: 1000;
+    background-color: rgba(255, 255, 255, 0.9);
+}
+
+.list-search i {
+    color: #3A3A3A;
+}
+
+.list-top-btn i {
+    font-size: 20px;
+    line-height: 62px;
+    color: #3A3A3A;
+    background-color: rgba(255, 255, 255, 0.6);
+    border: #3A3A3A solid 4px;
+    width: 70px;
+    height: 70px;
+    border-radius: 100%;
+    position: fixed;
+    bottom: 5%;
+    right: 3%;
+    text-align: center;
+    transition: 0.2s;
+    z-index: 1000;
+}
+
+.list-top-btn i:hover {
+    color: white;
+    background-color: #3a3a3aa0;
+    border: solid 4px white;
+    bottom: 8%;
+}
+
+.filter-wrapper {
+    margin: 20px 0;
+}
+
+.filter {
+    display: flex;
+    margin: 0 auto;
+    justify-content: center;
+}
+
+.filter-all {
+    margin-top: 20px;
+}
+
+.filter li {
+    cursor: pointer;
     display: flex;
     align-items: center;
-    justify-content: space-between;
+    width: 120px;
+    margin: 5px 0;
+    font-size: 18px;
 }
 
-.main-nav ul {
-    display: flex;
-    position: absolute;
-    top: 5%;
-    right: 2%;
-}
-
-.main-nav ul li img {
-    width: 50px;
-    height: 50px;
-}
-
-.main-nav ul li {
+.li-all {
+    justify-content: center;
+    border-radius: 16px;
     background-color: #3A3A3A;
-    border-radius: 100%;
-    width: 50px;
-    height: 50px;
-    text-align: center;
-    margin: 0 10px;
+    color: white;
 }
 
-.main-nav ul li a {
-    color: rgb(255, 255, 255);
-    font-size: 25px;
-    line-height: 50px;
+.filter li.is-active {
+    color: #D03A3A;
 }
 
-.logo img {
-    width: 100px;
-    position: absolute;
-    top: 3%;
-    left: 2%;
+.filter li img {
+    width: 20px;
+    height: 20px;
+    margin-right: 5px;
+}
+
+.category li {
+    display: none;
+}
+
+.category li.is-show {
+    display: block;
 }
